[package]
name = "capmon-staking"
version = "0.1.0"
description = "Tier-aware Capmon NFT staking program for the Solana Frontier Hackathon"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "capmon_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build, "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.0.2"
anchor-spl = { version = "1.0.2", features = ["token", "associated_token"] }
[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
