[package]
name = "capmon-staking"
version = "0.1.0"
description = "Tier-aware Capmon NFT staking with on-chain brain progression"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "capmon_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "1.0.2"
anchor-spl = { version = "1.0.2", features = ["token", "associated_token"] }
mpl-bubblegum = "3.0.0"
